анимация для текста в начале + новый шрифт

--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,30 @@
         font-style: normal;
         font-display: swap;
       }
+      @font-face {
+        font-family: 'o';
+        src: url('/fonts/t.otf') format('opentype'),
+            url('/fonts/t.otf') format('opentype');
+        font-weight: normal;
+        font-style: normal;
+        font-display: swap;
+      }
+      @font-face {
+        font-family: 'Sansation-Bold';
+        src: url('/fonts/Sansation-Bold1.ttf') format('truetype'),
+            url('/fonts/Sansation-Bold1.ttf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+        font-display: swap;
+      }
+      @font-face {
+        font-family: 'g';
+        src: url('/fonts/g.ttf') format('truetype'),
+            url('/fonts/g.ttf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+        font-display: swap;
+      }
     </style>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
