норм шрифт, анимации при наведении на проекты

--- a/public/index.html
+++ b/public/index.html
@@ -55,16 +55,16 @@
       }
       @font-face {
         font-family: 'Sansation-Bold';
-        src: url('/fonts/Sansation-Bold1.ttf') format('truetype'),
-            url('/fonts/Sansation-Bold1.ttf') format('truetype');
+        src: url('/fonts/MPLUS1p-Bold.ttf') format('truetype'),
+            url('/fonts/MPLUS1p-Bold.ttf') format('truetype');
         font-weight: normal;
         font-style: normal;
         font-display: swap;
       }
       @font-face {
         font-family: 'g';
-        src: url('/fonts/g.ttf') format('truetype'),
-            url('/fonts/g.ttf') format('truetype');
+        src: url('/fonts/m.ttf') format('truetype'),
+            url('/fonts/m.ttf') format('truetype');
         font-weight: normal;
         font-style: normal;
         font-display: swap;
