--- a/public/index.html
+++ b/public/index.html
@@ -69,6 +69,14 @@
         font-style: normal;
         font-display: swap;
       }
+      @font-face {
+        font-family: 'disabled';
+        src: url('/fonts/Oxygene1_RUS_by_KanycTa.ttf') format('truetype'),
+            url('/fonts/Oxygene1_RUS_by_KanycTa.ttf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+        font-display: swap;
+      }
     </style>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
