--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,7 @@
     <link rel="preload" href="/fonts/MPLUS1p-Bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" href="/fonts/m.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" href="/fonts/NauryzRedKeds.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+    <link rel="preload" href="/video/wheresitemp52white.mp4" as="video" type="video/mp4">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React App</title>
