--- a/public/index.html
+++ b/public/index.html
@@ -20,13 +20,27 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
+    <title>WHERESITE?</title>
+    <meta name="description" content="WHERESITE? - профессиональная разработка и продажа готовых сайтов.">
+    <meta name="keywords" content="разработка сайтов, заказать сайт, создание сайтов, React, Django, WHERESITE, сайты под ключ, веб-разработка">
+
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="WHERESITE?" />
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
+
+    <meta property="og:title" content="WHERESITE?">
+    <meta property="og:description" content="Создаём уникальные сайты под ключ. Без шаблонов. Без тильды. Только результат.">
+    <meta property="og:image" content="">
+    <meta property="og:url" content="https://wheresite.ru">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="ru_RU">
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="theme-color" content="#101010" />
     <!-- index.html -->
     <style>
       @font-face {
@@ -74,12 +88,11 @@
     <link rel="preload" href="/fonts/m.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" href="/fonts/NauryzRedKeds.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" href="/video/wheresitemp52white.mp4" as="video" type="video/mp4">
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+
+    <link rel="canonical" href="https://wheresite.ru" />
+
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
