--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,8 @@
         font-display: swap;
       }
     </style>
+    <link rel="prefetch" href="/video/wheresitemp52white.mp4" as="video" type="video/mp4">
+
     <link rel="preload" href="/fonts/MPLUS1p-Bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" href="/fonts/m.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" href="/fonts/NauryzRedKeds.ttf" as="font" type="font/ttf" crossorigin="anonymous">
