--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,7 @@
     <link rel="preload" href="/fonts/MPLUS1p-Bold.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" href="/fonts/m.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" href="/fonts/NauryzRedKeds.ttf" as="font" type="font/ttf" crossorigin="anonymous">
+    <link rel="preload" href="/fonts/WS.otf" as="font" type="font/otf" crossorigin="anonymous">
     <link rel="preload" href="/video/wheresitemp52white.mp4" as="video" type="video/mp4">
 
     <link rel="canonical" href="https://wheresite.ru" />
