оптимизация видео LAST

--- a/public/index.html
+++ b/public/index.html
@@ -89,6 +89,10 @@
     <link rel="preload" href="/fonts/NauryzRedKeds.ttf" as="font" type="font/ttf" crossorigin="anonymous">
     <link rel="preload" href="/fonts/WS.otf" as="font" type="font/otf" crossorigin="anonymous">
     <link rel="preload" href="/video/wheresitemp52whitefast.mp4" as="video" type="video/mp4">
+    <link rel="preload" href="/images/1primer.png" as="image">
+    <link rel="preload" href="/images/2primer.png" as="image">
+    <link rel="preload" href="/images/3primer.png" as="image">
+    <link rel="preload" href="/images/4primer.png" as="image">
 
     <link rel="canonical" href="https://wheresite.ru" />
 
